"Styles for hint on touch screen in style.css addded"

--- a/version_1.0.0/pages/about.html
+++ b/version_1.0.0/pages/about.html
@@ -33,7 +33,7 @@
 
             <div id="search_color">
                 <div>
-                    <input type="text" placeholder="Search" maxlength="9" id="search_bar">
+                    <input type="text" placeholder="Search color" maxlength="9" id="search_bar">
                     <i class="fa-solid fa-magnifying-glass"></i>
                 </div>
                 
