--- a/privacypolicy.html
+++ b/privacypolicy.html
@@ -31,7 +31,7 @@
 
             <div id="search_color">
                 <div>
-                    <input type="text" placeholder="Search color" maxlength="9" >
+                    <input type="text" placeholder="Search color" maxlength="9" id="search_bar">
                     <i class="fa-solid fa-magnifying-glass"></i>
                 </div>
                 
@@ -84,6 +84,7 @@
             </div>
 
         </header>
+
 
 
         <main id="main_privacy">
